<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyleNormal">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/edit_text_match_normal_style"
                android:hint="@string/name_text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextInputLayout"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/edit_text_match_normal_style"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/updateProfile"
            style="@style/button_normal_white_green_background_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:text="@string/update_text"
            android:layout_centerHorizontal="true"
            android:onClick="updateProfile"
            android:layout_below="@+id/emailTextInputLayout"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>