<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bgLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_layout_height"
            android:layout_below="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPagerId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabs" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_heigth"
        android:layout_margin="@dimen/margin_normal"
        android:background="@color/cardview_dark_background"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/bottom_sheet_peek_heigth"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myProfile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_sheet_peek_heigth"
                android:background="@color/colorPrimary"
                android:onClick="profileTextClick"
                android:padding="10dp"
                android:text="@string/more_text"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_logout"
                    android:drawablePadding="@dimen/padding_small"
                    android:onClick="logoutBtnClick"
                    android:padding="10dp"
                    android:text="@string/logout_title"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/updateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_update"
                    android:drawablePadding="@dimen/padding_small"
                    android:onClick="updateProfileClick"
                    android:padding="10dp"
                    android:text="@string/update_profile_text"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
